Implemented simple timezone support with tzdata package

--- a/google-calendar-api.cabal
+++ b/google-calendar-api.cabal
@@ -33,6 +33,7 @@ library
                        timerep              ,
                        old-locale           ,
                        unordered-containers ,
+                       tzdata               ,
                        google-apiIO
                        
   -- hs-source-dirs:      
